# DRTFace

./: CMakeLists.txt  Info.plist  LICENSE  README.md  appveyor.yml
cmake/: DRTFaceConfig.cmake.in  DRTFaceConfigVersion.cmake.in  types.h.in
demos/: CMakeLists.txt  Demo Core.cpp
include/: drtface.h
ml/: CMakeLists.txt  ml.cpp
model/: build.sh  converter.py  detector.py
model/model/: keras_metadata.pb
model/model/variables/: variables.index
modules/core/: CMakeLists.txt  CameraController.cpp  CameraController.h  Face.cpp  Face.h  Marker.cpp  Marker.h
p_test/: CMakeLists.txt  test.cpp  test2.py
p_test/model/: saved_model.pb
